docs+build: v7 final — full bake into image, humanized README
- Dockerfile: fetch references.json.gz from upstream and run
  DatasetBuilder during build so /data ships inside the image.
- docker-compose.yml: drop the ./data bind mount.
- README.md: bilingual EN/PT rewrite, humanizer pass to strip
  AI tropes. Local results table replaced with a pending note;
  the official rinha score will land after submission.